api gateway init
